--- a/src/app/modules/user/register/register.component.html
+++ b/src/app/modules/user/register/register.component.html
@@ -5,6 +5,9 @@
     <div class="flex center column">
       <mat-form-field>
         <input type="text" matInput placeholder="Digite o nome de usuário" formControlName="username">
+        <mat-error *ngIf="registerForm.get('username').hasError('unique')">
+          Username já existe
+        </mat-error>
       </mat-form-field>
       <mat-form-field>
         <input type="password" matInput placeholder="Digite a senha" formControlName="password">
@@ -23,7 +26,7 @@
     </div>
     <!-- BUTTONS -->
     <div class="flex row center">
-      <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid" class="btn">
+      <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid" class="btn register-color">
         Enviar
       </button>
       <button mat-raised-button color="warn" type="reset" class="btn">
