--- a/src/app/modules/task/container/container.component.html
+++ b/src/app/modules/task/container/container.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
-<app-list></app-list>
+<div class="main" [@fadeAnimation]>
+  <router-outlet></router-outlet>
+  <app-list></app-list>
+</div>
