--- a/src/app/modules/task/list/list.component.html
+++ b/src/app/modules/task/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="example-container mat-elevation-z8">
-    <mat-table #table [dataSource]="taskList">
+    <mat-table #table [dataSource]="taskList" >
   
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
@@ -7,13 +7,13 @@
       <!-- Position Column -->
       <ng-container matColumnDef="createdAt">
         <mat-header-cell *matHeaderCellDef> Data </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.createdAt | date: 'dd/MM/yyyy HH:mm' }} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{ element.createdAt | date: 'dd/MM/yyyy HH:mm' }} </mat-cell>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{ element.name | titlecase }} </mat-cell>
       </ng-container>
   
       <!-- Weight Column -->
@@ -39,6 +39,6 @@
       </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;" [@fadeStateAnimation]="animationState"></mat-row>
     </mat-table>
   </div>
