--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
         </button>
       </div>
     </mat-drawer>
-    <mat-drawer-content style="min-height: 600px; padding: 1%;">
+    <mat-drawer-content class="main">
       <router-outlet></router-outlet>
     </mat-drawer-content>
   </mat-drawer-container>
