--- a/src/app/modules/task/edit/edit.component.html
+++ b/src/app/modules/task/edit/edit.component.html
@@ -1,4 +1,4 @@
-<mat-card class="register-container">
+<mat-card class="register-container" [@fadeAnimation]>
   <h4 class="form title">Editar tarefa</h4>
   <form [formGroup]="editTaskForm" novalidate (ngSubmit)="handleSubmit()">
     <!-- INPUTS -->
