--- a/src/app/modules/task/list/list.component.css
+++ b/src/app/modules/task/list/list.component.css
@@ -1,3 +1,9 @@
 .mat-checkbox-layout {
   display: flex !important;
 }
+.edit {
+  background-color: blue;
+}
+.new-task {
+  background-color: aquamarine;  
+}
