--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,9 @@
       </div>
     </mat-drawer>
     <mat-drawer-content class="main">
-      <router-outlet></router-outlet>
+      <div [@fadeAnimation]="getRouteState(o)">
+        {{ getRouteState(o) }}
+        <router-outlet #o="outlet"></router-outlet>        
+      </div>
     </mat-drawer-content>
   </mat-drawer-container>
