--- a/src/app/modules/task/new/new.component.html
+++ b/src/app/modules/task/new/new.component.html
@@ -1,4 +1,4 @@
-<mat-card class="register-container" [@fadeAnimation]>
+<mat-card class="register-container">
   <h4 class="form title">Adicionar tarefa</h4>
   <form [formGroup]="newTaskForm" novalidate (ngSubmit)="handleSubmit()">
     <!-- INPUTS -->
