--- a/src/app/modules/task/list/list.component.html
+++ b/src/app/modules/task/list/list.component.html
@@ -39,6 +39,6 @@
       </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;" [@fadeStateAnimation]="animationState" [ngClass]="animationId === row.id ? animationClass : 'none'"></mat-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="animationId === row.id ? animationClass : 'none'"></mat-row>
     </mat-table>
   </div>
